[package]
name = "probot"
version = "0.0.1"
authors = ["Dennis Sivia <dev@d-coded.de>"]
edition = "2018"

[dependencies]
octokit = { path = "../octokit" }
jsonwebtoken = "6.0.1"
actix-web = "1.0.5"

bytes = "0.4"
futures = "0.1"
env_logger = "*"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
json = "*"
